@@ -329,35 +329,19 @@ public class GUIUtilities
 		return loadMenuItem(jEdit.getActionContext(),name,true);
 	} //}}}
 
-	//{{{ loadMenuItem() method
+	// {{{ loadMenuItem(EditAction, boolean) 
 	/**
-	 * Creates a menu item.
-	 * @param name The menu item name
-	 * @param setMnemonic True if the menu item should have a mnemonic
-	 * @since jEdit 3.1pre1
+	 * loadMenuItem method 
+	 * @param editAction
+	 * @param setMnemonic
+	 * @return a JMenuItem based on this EditAction.
+	 * @since jEdit 4.3pre7
 	 */
-	public static JMenuItem loadMenuItem(String name, boolean setMnemonic)
+	public static JMenuItem loadMenuItem(EditAction editAction, boolean setMnemonic) 
 	{
-		return loadMenuItem(jEdit.getActionContext(),name,setMnemonic);
-	} //}}}
-
-	//{{{ loadMenuItem() method
-	/**
-	 * Creates a menu item.
-	 * @param context An action context; either
-	 * <code>jEdit.getActionContext()</code> or
-	 * <code>VFSBrowser.getActionContext()</code>.
-	 * @param name The menu item name
-	 * @param setMnemonic True if the menu item should have a mnemonic
-	 * @since jEdit 4.2pre1
-	 */
-	public static JMenuItem loadMenuItem(ActionContext context, String name,
-		boolean setMnemonic)
-	{
-		if(name.startsWith("%"))
-			return loadMenu(context,name.substring(1));
-
-		String label = jEdit.getProperty(name + ".label");
+		String name = editAction.getName();
+		ActionContext context = jEdit.getActionContext();
+		String label = editAction.getLabel();
 		if(label == null)
 			label = name;
 
@@ -372,7 +356,7 @@ public class GUIUtilities
 			mnemonic = '\0';
 
 		JMenuItem mi;
-		if(jEdit.getBooleanProperty(name + ".toggle"))
+		if(editAction.isToggle()) 
 			mi = new EnhancedCheckBoxMenuItem(label,name,context);
 		else
 			mi = new EnhancedMenuItem(label,name,context);
@@ -381,8 +365,68 @@ public class GUIUtilities
 			mi.setMnemonic(mnemonic);
 
 		return mi;
+
+	} // }}}
+	
+	//{{{ loadMenuItem() method
+	/**
+	 * Creates a menu item.
+	 * @param name The menu item name
+	 * @param setMnemonic True if the menu item should have a mnemonic
+	 * @since jEdit 3.1pre1
+	 * 
+	 */
+	public static JMenuItem loadMenuItem(String name, boolean setMnemonic)
+	{
+		return loadMenuItem(jEdit.getAction(name), setMnemonic);
 	} //}}}
 
+	//{{{ loadMenuItem() method
+	/**
+	 * Creates a menu item.
+	 * @param context An action context; either
+	 * <code>jEdit.getActionContext()</code> or
+	 * <code>VFSBrowser.getActionContext()</code>.
+	 * @param name The menu item name
+	 * @param setMnemonic True if the menu item should have a mnemonic
+	 * @since jEdit 4.2pre1
+	 * 
+	 */
+	public static JMenuItem loadMenuItem(ActionContext context, String name,
+		boolean setMnemonic)
+	{
+		if(name.startsWith("%")) {
+			return loadMenuItem(context, name.substring(1), setMnemonic);
+		}
+		EditAction ea = context.getAction(name);
+		if (ea != null) return loadMenuItem(ea, setMnemonic);
+		String label = jEdit.getProperty(name + ".label"); 
+		if(label == null)
+			label = name;
+
+		char mnemonic;
+		int index = label.indexOf('$');
+		if(index != -1 && label.length() - index > 1)
+		{
+			mnemonic = Character.toLowerCase(label.charAt(index + 1));
+			label = label.substring(0,index).concat(label.substring(++index));
+		}
+		else
+			mnemonic = '\0';
+
+		JMenuItem mi;
+		if(jEdit.getBooleanProperty(name + ".toggle")) 
+			mi = new EnhancedCheckBoxMenuItem(label,name,context);
+		else
+			mi = new EnhancedMenuItem(label,name,context);
+
+		if(!OperatingSystem.isMacOS() && setMnemonic && mnemonic != '\0')
+			mi.setMnemonic(mnemonic);
+
+		return mi;
+
+		
+	}
 	//{{{ loadToolBar() method
 	/**
 	 * Creates a toolbar.
